# fastapi-base-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
core/: config.py  enums.py  logging.py
core/db/: __init__.py  session.py  standalone_session.py  transactional.py
core/utils/: config_helpers.py  secrets_manager.py
migrations/: env.py
scripts/: db_check.py  prestart.sh  startup.sh
scripts/db/: initial_data.py
scripts/devops/: format.sh  lint.sh
scripts/test/: exec_tests.sh  run_tests.sh
tests/: conftest.py
tests/app/: test_app.py
tests/core/: test_core.py
