[tool.poetry]
name = "fastapi-base-project"
version = "0.1.0"
description = "FastAPI Base project for Microservices"
authors = ["Hide <vaibhav.doddihal@oneadvanced.com>"]


[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.3"
uvicorn = "^0.23.2"
fastapi = "^0.103.0"
celery = "^5.3.1"
fastapi-event = "^0.1.3"
ujson = "^5.4.0"
aiomysql = "^0.1.1"
tenacity = "^8.2.3"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
pydantic-settings = "^2.0.3"
slowapi = "^0.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
pytest = "^7.4.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"